[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpyc-import-bridge"
version = "0.1.1"
description = "import proxying for rpyc"
readme = "README.md"
authors = [{name = "Red Thing", email = "redthing1@alt.icu"}]
requires-python = ">=3.11"
dependencies = [
    "rpyc>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "numpy>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rpyc_import_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
